# LinuxDev2020

./: .gitignore  LICENSE  README.md
02_BuildReq/: Makefile
03_TerminalProject/: Makefile  README.md  Show.c
04_Multifile/: Makefile  fun.c  outlib.h
04_Multifile/examples/: Makefile  fun.c  prog.c
05_Environmental/: Makefile.am  configure.ac
05_Environmental/autotools/: KeyScan.c  Makefile.am  configure.ac
05_Environmental/src/: pcre.c  pcre.h  re.c
06_Debugging/: Makefile  README.md  doublefree.c
06_Debugging/examples/: prog  rms.c
07_DebuggingTracing/: Makefile  myrm.c
07_DebuggingTracing/examples/: fakerand.c  one-liners.txt  printme  printme.c  teleport  teleport.c
08_TestingCoverage/: Makefile.am  configure.ac
08_TestingCoverage/examples/lnamegen/: Makefile.am  configure.ac
08_TestingCoverage/examples/lnamegen/src/: Makefile.am  namegen.c  namegen.h
08_TestingCoverage/examples/lnamegen/tests/: Makefile.am  stest.c  stest.ts
08_TestingCoverage/src/: Makefile.am  buf.c  buf.h
08_TestingCoverage/tests/: Makefile.am  init_free.ts  pop.ts  push.ts
09_I18nL10n/: .numg.c.swp  runumg.po
10_Documenting/: Doxyfile.in  Makefile.am  configure.ac  numg.c  numg.md  numg.pot  runumg.po  toroman.h
10_Documenting/documenting/examples/lnamegen/src/: libnamegen.c
10_Documenting/documenting/examples/lnamegen/tests/: errors.ts  systest.sh
10_Documenting/documenting/src/: libbuf.c
10_Documenting/documenting/tests/: clear_noop.ts  init_free.ts  trunc_grow.ts
11_Toolkits/: Makefile.am  configure.ac  hashtext.c  text.txt
12_ScriptingText/: Makefile.am  configure.ac
12_ScriptingText/examples/: KeyScan.c  Makefile.am  configure.ac  testty.sh
12_ScriptingText/src/: pcre.c  pcre.h  re.c
13_PatchInstall/: Makefile.am  numg.c  runumg.po
